2003-10-12  Marcus Brinkmann  <marcus@gnu.org>

	* config.m4: New file.
	* Makefile.am (laden_LDFLAGS): Replace load address with
	@HURD_LADEN_LOAD_ADDRESS@.

2003-10-04  Marcus Brinkmann  <marcus@gnu.org>

	* laden.h (add_memory_map): Don't round END up to 1K.
	* ia32-cmain.c (find_components): Pass the address of the last
	byte as END to add_memory_map.  Don't do bogus alignment check
	without BIOS map.  Add 0xc0000 - 0xf0000 as shared memory.
	Initially, add the whole address space as shared memory to allow
	arbitrary device access.
	* loader.c: Include <l4/kip.h>.
	(mem_check): Change type of address args to l4_word_t.  Use
	l4_memory_desc_low and l4_memory_desc_high to determine range of
	memory descriptor.  The high address is inclusive now, so take
	this into account.  Allow conventional memory descriptors to
	override non-conventional.  Use L4_PRIxWORD.

2003-09-29  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c (loader_elf_load): Fix wordsize check.  Submitted by
	Johan Rydberg.

2003-09-25  Johan Rydberg  <jrydberg@night.trouble.net>

        * laden.c (main): Call start_kernel to launch kernel instead
        of calling the kernel start address.
        * laden.h (start_kernel): Prototype.
        * ia32-cmain.c (start_kernel): New function.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c [HAVE_CONFIG_H]: Include <config.h>.
	(loader_elf_load): Rewritten architecture check of ELF binary,
	support PPC now.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* elf.h: Remove cruft.

2003-09-21  Marco Gerards  <metgerards@student.han.nl>

	* output-serial.c (serial_init): Make sure the order of the
	arguments of outb are correct.

	* Makefile.am (AM_CPPFLAGS): New variable.

2003-09-19  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c (debug_dump): Cast mod[nr].string to char *.
	* laden.c (parse_args): Remove superfluous arguments.
	* loader.c: Include <string.h>.
	* kip-fixup.c (kip_fixup): Use %p for pointer.