@@ -1,3 +1,8 @@
+2003-10-26  Marcus Brinkmann  <marcus@gnu.org>
+
+	* Makefile.am (physmem_CPPFLAGS): Use top_builddir for include
+	directory.
+
 2003-10-24  Daniel Wagner  <wagi@gmx.ch>
 
 	* Makefile.am (physmem_CPPFLAGS): Use top_scrdir instead of 
