@@ -1,3 +1,10 @@
+2003-10-26  Marcus Brinkmann  <marcus@gnu.org>
+
+	* Makefile.am (AM_CPPFLAGS): Removed.
+	(laden_CFLAGS): Rename to ...
+	(laden_CPPFLAGS): Add AM_CPPFLAGS.  Change -I$(top_srcdir)/include
+	to -I$(top_builddir).
+
 2003-10-12  Marcus Brinkmann  <marcus@gnu.org>
 
 	* config.m4: New file.
